--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+chrono = { version = "0.4.42", features = ["serde"] }
 clap = { version = "4.5.50", features = ["derive"] }
-derive_more = { version = "2.0.1", features = ["from"] }
+derive_more = { version = "2.0.1", features = ["display", "from"] }
 env_logger = "0.11.8"
 fs-err = "3.1.3"
 itertools = "0.14.0"
@@ -15,3 +16,4 @@ percent-encoding = "2.3.2"
 reqwest = { version = "0.12.24", features = ["blocking"] }
 scraper = "0.24.0"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
