--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 anyhow = "1.0.100"
 chrono = { version = "0.4.42", features = ["serde"] }
 clap = { version = "4.5.50", features = ["derive"] }
-derive_more = { version = "2.0.1", features = ["display", "from"] }
+derive_more = { version = "2.0.1", features = ["display", "from", "from_str"] }
 env_logger = "0.11.8"
 fs-err = "3.1.3"
 itertools = "0.14.0"
